// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react should add listeners at mount 1`] = `
Object {
  "dispatch": Array [
    Array [
      "@@krm/LISTENERS>ADDED",
    ],
    Array [
      "@@krm/LISTENERS>REMOVING",
    ],
  ],
}
`;

exports[`react should dispatch events at mount with a given name 1`] = `
Object {
  "dispatch": Array [
    Array [
      "@@krm/LISTENERS>ADDED>my-name",
    ],
    Array [
      "@@krm/LISTENERS>REMOVING>my-name",
    ],
  ],
}
`;

exports[`react should inject store to a component 1`] = `"<div>a label</div>"`;

exports[`react should provide store as context and dispatch an INIT event 1`] = `
Object {
  "dispatch": Array [
    Array [
      "@@krml/INIT",
    ],
  ],
  "html": "<div>{\\"this\\":\\"is my store\\"}</div>",
}
`;

exports[`react should refresh when props changes 1`] = `"<div>a label-2</div>"`;

exports[`react should refresh when store changes 1`] = `"<div>an other label</div>"`;
